Fixes wrap max width

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,8 +51,8 @@ margin-bottom: 20px;
 html, body { height: 100%; }
 
 body {
-	font:16px/1 "Helvetica Neue", Helvetica, Arial, sans-serif;
-	color: #666;
+	font:18px/1 "Helvetica Neue", Helvetica, Arial, sans-serif;
+	color: #555;
 	-webkit-font-smoothing: antialiased;
 	text-rendering: optimizeLegibility;
 }
@@ -71,7 +71,7 @@ h2 {
 
 .profile #wrapper {
 	padding: 100px 40px 0px;
-	max-width: 600px;
+	max-width: 960px;
 	margin: 0 auto;
 }
 
@@ -139,13 +139,13 @@ nav.main-nav a.cta {
 }
 
 #wrapper {
-  max-width: 600px;
+  max-width: 960px;
   margin: 0 auto;
   padding: 60px 40px 100px 40px;
 }
 
 #wrapper.home {
-	max-width: 600px;
+	max-width: 960px;
 	margin: 0 auto;
 	padding: 0px 40px 20px 40px;
 	line-height: 1.7;
@@ -230,12 +230,12 @@ em, i { font-style: italic; }
 .post h1 {
 	margin-bottom: 20px;
 	color: #222;
-	font: 300 32px/1.4em "Helvetica Neue", Helvetica,Arial,sans-serif;
+	font: 300 36px/1.4em "Helvetica Neue", Helvetica,Arial,sans-serif;
 }
 
 .post h2 {
 	margin-bottom: 40px;
-	  font: 300 24px/1.5 "Helvetica Neue",Helvetica,Arial,sans-serif;
+	  font: 300 28px/1.5 "Helvetica Neue",Helvetica,Arial,sans-serif;
 	  color: #111;
 }
 
@@ -261,12 +261,12 @@ em, i { font-style: italic; }
 
 h3, h4, h5 { color:#333; }
 
-h3 { font-size:20px; font-weight: 400; }
-h4 { font-size:16px; font-weight:bold; }
-h5 { font-size:15px; font-weight: bold; }
+h3 { font-size:24px; font-weight: 400; }
+h4 { font-size:20px; font-weight:bold; }
+h5 { font-size:18px; font-weight: bold; }
 
 h6 {
-	font-size: 13px;
+	font-size: 16px;
 	font-weight: bold;
 	color: #666;
 	margin-bottom: 6px;
@@ -305,7 +305,7 @@ pre	{
 	border-radius: 3px;
 	background: #272b2d;
 	  font-family: 'Source Code Pro',Menlo,monospace;
-	  font-size: 13px;
+	  font-size: 16px;
 	  line-height: 1.5em;
 	  font-weight: 500;
 	color: #d0d4d7;
@@ -445,7 +445,7 @@ Post List
 }
 
 #post-meta {
-	font-size: 13px;
+	font-size: 16px;
 	font-weight: bold;
 	line-height: 1.4;
 	border-top: 1px solid #eee;
@@ -579,8 +579,8 @@ h2.month {
 }
 
 #post-meta img.avatar {
-  height: 36px;
-  width: 36px;
+  height: 60px;
+  width: 60px;
   float: left;
   border-radius: 50%;
   margin-top: 3px;
